<resources>
    <string name="app_name">BeautyModelApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_profile">Profile</string>
    <string name="my_services">Services</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="show_feedbacks">Show feedbacks</string>
    <string name="settings">Settings</string>
    <string name="avatar">Avatar</string>
    <string name="search">Search</string>

    <string name="preference_file_key">preference_file_key</string>

    <string-array name="Towns">
        <item>Moscow</item>
        <item>Saint-Petersburg</item>
        <item>Bratsk</item>
        <item>Ekaterinburg</item>
        <item>Tula</item>
        <item>Kaluga</item>
    </string-array>

    <string-array name="Types">
        <item>Model</item>
        <item>Master</item>
    </string-array>
</resources>